# Q2_25_Builder_RishiChaturvedi

./: arch_turbine_novaa.excalidraw
amm-program/: Anchor.toml
amm-program/programs/amm-program/: Cargo.toml
amm-program/programs/amm-program/src/: lib.rs
amm-program/tests/: amm-program.ts
creator-dao/: .gitignore  Anchor.toml  new_keypair.json  package-lock.json
creator-dao/programs/creator-dao/: Cargo.toml
creator-dao/programs/creator-dao/src/: lib.rs
creator-dao/tests/: creator-dao.ts
escrow/: Anchor.toml
escrow/programs/escrow/: Cargo.toml
escrow/programs/escrow/src/: lib.rs
novaa-ui/: README.md  package-lock.json  package.json  postcss.config.mjs:Zone.Identifier  vercel.json
novaa-ui/src/app/: globals.css  layout.tsx  page.tsx
novaa-ui/src/app/components/: BottomNavbar.jsx  FooterLeft.jsx  FooterRight.jsx  InitializeDAO.jsx  TopNavbar.jsx  VideoCard.jsx
novaa-ui/src/app/dashboard/: page.tsx
novaa-ui/src/app/initialize_dao/: page.jsx
novaa-ui/src/app/utils/: creator_dao.json
prereq_task2/: .gitignore  Cargo.toml
prereq_task2/programs/: mod.rs
prereq_task2/src/: lib.rs
prereq_task2/src/programs/: turbin3_prereq.rs
prereq_task_1/: .gitignore  airdrop.ts  enroll.ts  key_from_mnemonic.ts  package-lock.json  package.json  transfer.ts
prereq_task_1/programs/: Turbin3_prereq.ts
solana-vault-program/: Anchor.toml
solana-vault-program/programs/solana-vault-program/: Cargo.toml
solana-vault-program/tests/: solana-vault-program.ts
walrus_nft_mint/: .env  index.ts  package-lock.json  package.json
(+1 files in other folders)
