[package]
name = "amm-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0" }
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "1.18.13"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }